[package]
name = "weight-tracker"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "weight-tracker"

[dependencies]
axum = { version = "0.7.5"}
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.120" }
chrono = { version = "0.4.38", features = ["serde"]}
sqlx = { version = "0.8.1", features = ["runtime-tokio", "sqlite", "chrono", "migrate"] }
handlebars = { version = "5.1.2" }
