[package]
name = "weight-tracker"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "weight-tracker"

[dependencies]
axum = { version = "0.8.1" }
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138" }
chrono = { version = "0.4.39", features = ["serde"] }
sqlx = { version = "0.8.3", features = [
  "runtime-tokio",
  "sqlite",
  "chrono",
  "migrate",
] }
handlebars = { version = "6.3.0" }
