[package]
name = "weight-tracker"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "weight-tracker"

[dependencies]
axum = { version = "0.8.4" }
tokio = { version = "1.46.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.141" }
chrono = { version = "0.4.41", features = ["serde"] }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "sqlite",
  "chrono",
  "migrate",
] }
handlebars = { version = "6.3.2" }
